--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Secret.swift
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
